<resources>
    <string name="action_settings">设置</string>
    <string name="language">语言设置</string>
    <string name="cache">清除缓存</string>
    <string name="emerContact">紧急联系人</string>
    <string name="emerSend">紧急情况发送方式</string>
    <string name="about">关于我们</string>
    <string name="exit">退\t\t\t\t出</string>
    <string name="add">添加联系人</string>
    <string name="sure">确\t\t定</string>
    <string name="sendSms">发送短信至紧急联系人</string>
    <string name="callPhone">自动拨打紧急联系人电话</string>
    <string name="sendEmail">发送邮件至紧急联系人邮箱</string>
    <string name="addContact">添加紧急联系人</string>
    <string name="name">姓名:</string>
    <string name="phone">电话:</string>
    <string name="email">邮箱:</string>
    <string name="lanuageSetting">语言设置</string>
    <string name="testRecorder">监测记录</string>
    <string name="avaghr">平均心律</string>
    <string name="heart_hr">正常心律</string>
    <string name="normalHeart">正常心律范围</string>
    <string name="rhythm">节律范围</string>
    <string name="testTime">记录时间:</string>
    <string name="testDuration">测试时长:</string>
    <string name="more">更多</string>
    <string name="testFeedback">监测反馈:</string>
    <string name="feedbackData">各项指标均在指标范围内</string>
    <string name="exception">无</string>
    <string name="anomalyIndex">异常指标:</string>
    <string name="sleep">评分:</string>
    <string name="sleepQuality">好</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="January">一月</string>
    <string name="Febuary">二月</string>
    <string name="March">三月</string>
    <string name="April">四月</string>
    <string name="May">五月</string>
    <string name="June">六月</string>
    <string name="July">七月</string>
    <string name="August">八月</string>
    <string name="September">九月</string>
    <string name="October">十月</string>
    <string name="November">十一月</string>
    <string name="December">十二月</string>
    <string name="loginusername">用户名</string>
    <string name="loginpassWord">密码</string>
    <string name="username">* 用户名</string>
    <string name="passWord">* 密&#160;&#160;&#160;&#160;码</string>
    <string name="login">登        录</string>
    <string name="register">新用户注册</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="registers">注        册</string>
    <string name="inputUsername">请输入手机号码</string>
    <string name="sendVerify">发送验证码</string>
    <string name="inputVerify">请输入验证码</string>
    <string name="pleaseEP">请输入邮箱或手机号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="surePassword">* 确认密码</string>
    <string name="inputPasswordAgain">请确认密码</string>
    <string name="btnFinish">完成</string>
    <string name="inputName">姓名</string>
    <string name="hintInputName">请输入您的姓名</string>
    <string name="IdNumber">身份证号</string>
    <string name="inputIdNumber">身份证号</string>
    <string name="phoneNumber">电话号码</string>
    <string name="inputPhoneNumber">电话号码</string>
    <string name="age">年龄</string>
    <string name="inputAge">年龄</string>
    <string name="hintInputAge">请输入您的年龄</string>
    <string name="sex">性别</string>
    <string name="hintInputSex">请选择您的性别</string>
    <string name="birthday">生日</string>
    <string name="hintInputBirthday">请选择您的生日</string>
    <string name="phoneNum">手机</string>
    <string name="hintInputPhoneNum">请输入您的手机号码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="next">下一页</string>
    <string name="height">身高</string>
    <string name="inputHeight">身高(cm)</string>
    <string name="weight">体重</string>
    <string name="inputWeight">体重(kg)</string>
    <string name="heartDiease">心脏病史</string>
    <string name="highDiease">高血压病史</string>
    <string name="diabetes">糖尿病病史</string>
    <string name="have">有</string>
    <string name="no">无</string>
    <string name="dontKnow">未知</string>
    <string name="appeal">诉求</string>
    <string name="inputAppeal">诉求</string>
    <string name="address">地址</string>
    <string name="inputAddress">地址</string>
    <string name="hintInputAddress">请输入您的地址</string>
    <string name="emerContactName">* 姓名</string>
    <string name="inputEmerContactName">紧急联系人姓名</string>
    <string name="emerContactPhone">* 手机号</string>
    <string name="inputEmerContactPhone">紧急联系人手机号</string>
    <string name="emerContactEmail">* 邮箱</string>
    <string name="inputEmerContactEmail">紧急联系人邮箱</string>
    <string name="testToday">今日监测</string>
    <string name="notice">提示</string>
    <string name="accessPhone">请将监测仪器接入手机usb口</string>
    <string name="InstantHeartRate">实时心律</string>
    <string name="NormalRhythm">实时呼吸</string>
    <string name="startTest">开始监测</string>
    <string name="endTest">结束监测</string>
    <string name="end">结束</string>
    <string name="finish">本次监测已经完成!</string>
    <string name="confirm">确认</string>
    <string name="verify">注册验证</string>
    <string name="content">验证码信息已发送至</string>
    <string name="sendTime">验证码五分钟内有效,请尽快使用</string>
    <string name="send">发送</string>
    <string name="reSend">重新发送</string>
    <string name="searchPassword">找回密码</string>
    <string name="resetPwd">重置密码</string>
    <string name="inputNewPassword">请输入你的新密码</string>
    <string name="ReInputNewPassword">请再次输入确认密码</string>
    <string name="nextStep">下一步</string>
    <string name="close">关\t\t闭</string>
    <string name="languageChoice">语言选择</string>
    <string name="entervertical">请输入收到的验证码</string>
    <string name="cancelLogin">注销登录</string>
    <string name="product">优护心衣</string>
    <string name="version">版本号:</string>
    <string name="version_num">版本序号:</string>
    <string name="detail">了接更多详情请访问:\nhttp://www.uteamtec.com</string>
    <string name="service">联系电话:</string>
    <string name="service_phone">+86 0571&#8212;82153772</string>
    <string name="organizeEmail">邮箱:67878966@qq.com</string>
    <string name="deleteCache">确定删除缓存吗?</string>
    <string name="cancel">取\t\t消</string>
    <string name="exitApp">再按一次退出程序</string>
    <string name="dataExcept">数据统计异常</string>
    <string name="stop">还有记录正在运行,请先停止记录!</string>
    <string name="noContectDevice">系统不支持usb host,无法连接设备</string>
    <string name="fail">开始记录失败</string>
    <string name="record">已经开始记录了</string>
    <string name="notDevice">设备没有响应</string>
    <string name="noReady">设备没有准备好</string>
    <string name="noLogin">还没有登陆</string>
    <string name="noInit">osdk没有初始化</string>
    <string name="parError">参数错误</string>
    <string name="userWrong">输入的用户名格式有误</string>
    <string name="passwordWrong">密码输入格式错误</string>
    <string name="surePasswordWrong">确认密码输入格式错误</string>
    <string name="diffPassword">两次输入的密码不一致</string>
    <string name="nameWrong">姓名输入格式错误</string>
    <string name="idNumberWrong">身份证号码输入格式错误</string>
    <string name="phoneWrong">电话号码不能为空</string>
    <string name="ageWrong">年龄输入格式有误</string>
    <string name="sexNoEmp">性别不能为空</string>
    <string name="heightWrong">身高输入格式错误</string>
    <string name="weightWrong">体重输入格式错误</string>
    <string name="heartNoEmp">心脏病史不能为空</string>
    <string name="highNoEmp">高血压病史不能为空</string>
    <string name="diabetesNoEmp">糖尿病病史不能为空</string>
    <string name="addressNoEmp">输入的地址格式错误</string>
    <string name="emerNameWrong">紧急联系人姓名输入格式错误</string>
    <string name="emerPhoneWrong">紧急联系人电话输入格式错误</string>
    <string name="emerEmailWrong">紧急联系人邮箱输入格式错误</string>
    <string name="addEmerWrong">输入的邮箱格式有误</string>
    <string name="addEmerPhone">输入的手机号码格式有误</string>
    <string name="inputAddEmerContact">请输入紧急联系人姓名,手机号或者邮箱</string>
    <string name="userOrPass">用户名或密码为空</string>
    <string name="noExit">用户名不存在</string>
    <string name="noPass">密码错误</string>
    <string name="netWrong">网络连接错误</string>
    <string name="userNumber">用户号码为邮箱</string>
    <string name="wait">请等待一分钟后再尝试</string>
    <string name="searchDate">请点击查询日期</string>
    <string name="closeRecord">【关闭记录】文件异常,开始记录失败！</string>
    <string name="noUse">当前sdk设备无法使用此型号设备</string>
    <string name="deviceuse">设备无法使用</string>
    <string name="noStart">没有开始记录!</string>
    <string name="heartExp">心律异常</string>
    <string name="indicators">各项指标均在正常范围内</string>
    <string name="scope">部分指标不在正常范围内</string>
    <string name="care">心律情况不稳定</string>
    <string name="conditionchange">情况变化</string>
    <string name="verWrong">输入的验证码有误</string>
    <string name="timeOut">验证码过期,请重新请求</string>
    <string name="userRight">请输入正确的用户名</string>
    <string name="remember">记住密码</string>
    <string name="explain">使用说明</string>
    <string name="mobile">用户号码为手机号码</string>
    <string name="haveUser">用户已存在</string>
    <string name="minute">秒</string>
    <string name="verifition">* 验证码</string>
    <string name="inputVerifition">验证码</string>
    <string name="personalInfo">是否完善个人信息?</string>
    <string name="personal">个人信息</string>
    <string name="registersf">注册成功!</string>
    <string name="perUser">姓名</string>
    <string name="loadsf">上传成功!</string>
    <string name="loadFail">上传失败!</string>
    <string name="finishes">完\t\t成</string>
    <string name="delete">删除</string>
    <string name="caches">缓存</string>
    <string name="noHistory">您还没有历史记录，快去测试吧!</string>
    <string name="fibrillation">可能为房颤,建议尽快就医!</string>
    <string name="sleepGood">睡眠质量好!</string>
    <string name="arrest">心脏骤停!</string>
    <string name="choiceLanguage">请选择一种语言</string>
    <string name="noConnect">连接不到设备</string>
    <string name="adds">添\t\t加</string>
    <string name="exitAccount">退出我的账号</string>
    <string name="detectionStart">开始时间:</string>
    <string name="detectionEnd">结束时间:</string>
    <string name="detectionLong">监测时长:</string>
    <string name="seeDetail">查看详情</string>
    <string name="noRecord">没有监测记录!</string>
    <string name="drawer_menu_open">打开菜单</string>
    <string name="drawer_menu_close">关闭菜单</string>
    <string name="rescan">重新扫描</string>
    <string name="rescanning">扫描中</string>
    <string name="new_conn_confirm_title">确定绑定该设备？</string>
    <string name="new_conn_confirm_content">当前连接会被断开</string>
    <string name="yes">是</string>
    <string name="ble_disabled">蓝牙未开启</string>
    <string name="device_off">设备离线</string>
    <string name="inputSave">保存</string>
    <string name="inputCancel">撤销</string>
    <string name="detection_detail">监测详情</string>
    <string name="detection_date_title">监测日期: </string>
    <string name="detection_time_title">监测时长: </string>
    <string name="detection_result_title">监测结果: </string>
    <string name="detection_signal_title">信号质量: </string>
    <string name="heart_rate_title">心&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;率: </string>
    <string name="heart_health_title">心律健康指数: </string>
    <string name="respiratory_rate_title">呼&#160;&#160;吸&#160;&#160;率: </string>
    <string name="arrhythmia_title">心律不齐: </string>
    <string name="heart_rate_fast_title">心律过速: </string>
    <string name="heart_rate_slow_title">心律过缓: </string>
    <string name="ventricular_premature_beat_title">室性早搏: </string>
    <string name="room_sex_premature_beat_title">房性早搏: </string>
    <string name="ventricular_fibrillation_title">室&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;颤: </string>
    <string name="atrial_fibrillation_title">房&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;颤: </string>
    <string name="detection_conclusion_title">监测结论: </string>
    <string name="reconnect_device">重启设备</string>
    <string name="change_device">换绑设备</string>
    <string name="clear_db">清除数据</string>
    <string name="searching">搜索中</string>
    <string name="logout">登出账号</string>
    <string name="login_again">返回登录</string>
    <string name="aerocardio_setting_desc1">请在“设置”中开启“蓝牙”功能</string>
    <string name="aerocardio_setting_desc2">扫描设备，选择设备绑定</string>
</resources>