<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.AeroCardioActivity">

    <item
        android:id="@+id/action_settings_reconnect_device"
        android:orderInCategory="20"
        android:title="@string/reconnect_device"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings_change_device"
        android:orderInCategory="21"
        android:title="@string/change_device"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings_personal"
        android:orderInCategory="30"
        android:title="@string/personal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings_logout"
        android:orderInCategory="31"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings_login"
        android:orderInCategory="32"
        android:title="@string/login_again"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings_clear_db"
        android:enabled="false"
        android:orderInCategory="200"
        android:title="@string/clear_db"
        android:visible="false"
        app:showAsAction="never" />

</menu>
