<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/historyLayout">

            <TextView
                style="@style/historyText"
                android:layout_width="wrap_content"
                android:text="@string/detectionStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/history_record_item_tv_start_time"
                style="@style/historyShow"
                android:text="2016-01-06 14：54：42 "
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout style="@style/historyLayout">

            <TextView
                style="@style/historyText"
                android:layout_width="wrap_content"
                android:text="@string/testDuration"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/history_record_item_tv_duration"
                style="@style/historyShow"
                android:text="00:05:42"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout style="@style/historyLayout">

            <TextView
                style="@style/historyText"
                android:layout_width="wrap_content"
                android:text="@string/testFeedback"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/history_record_item_tv_feedback"
                style="@style/historyShow"
                android:text="@string/feedbackData"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout style="@style/historyLayout">

            <TextView
                style="@style/historyText"
                android:layout_width="wrap_content"
                android:text="@string/anomalyIndex"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/history_record_item_tv_exception"
                style="@style/historyShow"
                android:text="@string/exception"
                android:textSize="18sp" />
        </LinearLayout>

        <include
            layout="@layout/fragment_history_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--<ImageView
        android:layout_width="@dimen/erem_icones"
        android:layout_height="@dimen/erem_icones"
        android:layout_alignParentRight="true"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/s_share" />-->

</RelativeLayout>