<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/margin">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_marginTop="@dimen/margins"
        >
        <LinearLayout
            style="@style/historyLayout">
            <TextView
                android:layout_width="wrap_content"
                style="@style/historyText"
                android:text="@string/detectionStart"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/history_data_item_tv_startDate"
                style="@style/historyShow"
                android:text="2016-01-06 14：54：42 "
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            style="@style/historyLayout">
            <TextView
                android:layout_width="wrap_content"
                style="@style/historyText"
                android:text="@string/detectionEnd"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/history_data_item_tv_endDate"
                style="@style/historyShow"
                android:text="2016-01-07 14：54：42 "
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            style="@style/historyLayout">
            <TextView
                android:layout_width="wrap_content"
                style="@style/historyText"
                android:text="@string/testDuration"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/history_data_item_tv_lenth"
                style="@style/historyShow"
                android:text="00:05:42"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            style="@style/historyLayout">
            <TextView
                android:layout_width="wrap_content"
                style="@style/historyText"
                android:textSize="12sp"
                android:text="@string/testFeedback"/>
            <TextView
                android:id="@+id/history_data_item_tv_feedBack"
                style="@style/historyShow"
                android:textSize="12sp"
                android:text="@string/feedbackData" />
        </LinearLayout>
        <LinearLayout
            style="@style/historyLayout">
            <TextView
                android:layout_width="wrap_content"
                style="@style/historyText"
                android:text="@string/anomalyIndex"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/history_data_item_tv_exception"
                style="@style/historyShow"
                android:text="@string/exception"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            style="@style/historyLayout">
            <TextView
                android:layout_width="wrap_content"
                style="@style/historyText"
                android:text="@string/sleep"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/history_data_item_tv_sleep"
                style="@style/historyShow"
                android:text="----"
                android:textSize="12sp"/>
        </LinearLayout>
        <include android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/record_data" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/history_data_item_ll_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:layout_marginTop="@dimen/margins">
        <ImageView
            android:layout_width="@dimen/erem_icon"
            android:layout_height="@dimen/erem_icon"
            android:src="@mipmap/s_share"
            android:layout_gravity="center"
           />
    </LinearLayout>
</LinearLayout>