<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin"
    android:background="@drawable/detection_bg">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    >
    <TextView
        style="@style/setTitleText"
        android:textColor="@color/colorHisSize"
        android:text="@string/notice"
        />
    <LinearLayout
        android:id="@+id/detection_dialog_ll_close"
        style="@style/titleLayoutes"
        >
        <ImageView
            style="@style/titleImages"
            android:src="@mipmap/d_close"/>
    </LinearLayout>
</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="@dimen/margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detectionStart"/>
        <TextView
            android:id="@+id/ddetection_dialog_tv_startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:hint="2016-09-20 10:56:34"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detectionEnd"/>
            <TextView
                android:id="@+id/ddetection_dialog_tv_endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:hint="2016-09-20 11:56:34"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detectionLong"/>
        <TextView
            android:id="@+id/ddetection_dialog_tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:hint="25秒"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp" />
    <TextView
        android:id="@+id/detection_dialog_tv_detail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/seeDetail"
        android:gravity="center"
        android:textColor="@color/colorHisSize"
        android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>